--- a/Code/VideoParser/VideoParser.vcxproj
+++ b/Code/VideoParser/VideoParser.vcxproj
@@ -85,6 +85,10 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Source.cpp" />
+    <ClCompile Include="VideoParser.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="VideoParser.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
